fix: shift globe 300px left and increase message spacing

--- a/nuclear_ai/style.css
+++ b/nuclear_ai/style.css
@@ -15,7 +15,7 @@
 #globe-container {
   position: absolute;
   bottom: -280px;
-  right: -140px;
+  right: 160px;
   width: 1100px;
   height: 1100px;
   z-index: 0;
